# grimorium

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  TODOs.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  milestone_trigger.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/reference/: adapters.md  config.md  grimorium.md  spellsync.md
docs/user_guide/: cli.md  core_concepts.md  getting_started.md  security.md
example/: agent.py  config.py  magetools.yaml  root_agent.py  tools.py  utils.py
example/.magetools/example_book/: grimorium_summary.md  manifest.json  tools2.py
example/.magetools/example_grim/: grimorium_summary.md  manifest.json  tools1.py
reference/adapters/: index.html
reference/config/: index.html
reference/grimorium/: index.html
reference/spellsync/: index.html
search/: search_index.json
src/grimorium/: __init__.py  __main__.py  config.py  exceptions.py  grimorium.py  models.py  prompts.py  spell_registry.py  spellsync.py  tools.py  tools_embeddings.json  utils.py
src/magetools/: __init__.py  __main__.py  adapters.py  config.py  constants.py  exceptions.py  grimorium.py  interfaces.py  prompts.py  spell_registry.py  spellsync.py
tests/: conftest.py  test_adapters.py  test_config.py  test_exceptions.py  test_grimorium.py  test_main.py  test_manifest.py  test_spell_registry.py  test_spellsync.py
user_guide/cli/: index.html
user_guide/core_concepts/: index.html
user_guide/getting_started/: index.html
user_guide/security/: index.html
