[project]
name = "grimorium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Malcom Godlike", email = "ivmno1special@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.13.0",
    "google-genai>=1.32.0",
    "scikit-learn>=1.7.1",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]
