[project]
name = "magetools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Malcom Godlike", email = "ivmno1special@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "google-adk>=1.23.0",
    "google-genai>=1.61.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
]

